[package]
name = "output"
version = "0.1.0"
authors = ["laik <laik.lj@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.common]
path = "../common"

[dependencies]
kafka = "0.8"
# ringbuf = "0.2.3"
async-std = "1.9.0"
lazy_static = "1.4.0"
crossbeam-channel = "0.5.0"